fix: minor cleanup and adjustments to shadow overflow

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -2,14 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Bungee&family=Gruppo&family=Rubik:ital,wght@0,400;0,800;1,400;1,800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bungee&family=Gruppo&family=Rubik:ital,wght@0,400;0,800;1,400;1,800&display=swap");
 
-body {
-  font-family: "Rubik", sans-serif;
-}
-
+/* Scroll setup and behavior */
 html {
   scroll-behavior: smooth;
+}
+
+section {
+  padding: 50px;
+  scroll-margin-top: 40px;
+}
+
+/* Font setup */
+body {
+  font-family: "Rubik", sans-serif;
 }
 
 h1,
@@ -32,6 +39,16 @@ p {
 
 em {
   font-weight: 800;
+}
+
+.wopee-io::first-letter {
+  font-family: Bungee;
+}
+
+.wopee-io {
+  font-family: Rubik;
+  font-weight: 800;
+  display: inline-block;
 }
 
 /* You can override the default Infima variables here. */
@@ -80,11 +97,6 @@ em {
   --ifm-color-secondary-lightest: #9a57ce;
 }
 
-section {
-  padding: 50px;
-  scroll-margin-top: 40px;
-}
-
 /* Navbar Button */
 #navbar-button {
   background-color: var(--ifm-color-primary);
@@ -122,7 +134,7 @@ a.navbar__item:hover {
 .menu__link--active:not(.menu__link--sublist) {
   background-color: transparent;
 }
-/* This is done because active link will change color based on active, all #ids are on the same page - so all will be active at all times */
+/* This is done because active link will change color based on this class, all #ids are on the same page - so all link items will be active at all times */
 .navbar__link--active {
   color: var(--unexisting-color);
 }
@@ -154,14 +166,4 @@ a.navbar__item:hover {
 
 .footer a:hover {
   color: white;
-}
-
-.wopee-io::first-letter {
-  font-family: Bungee;
-}
-
-.wopee-io {
-  font-family: Rubik;
-  font-weight: 800;
-  display:inline-block;
 }
